# kayakish

./: .dockerignore  .env.example  .flake8  .gitignore  DOCKER.md  Dockerfile  GLOSSARY.md  INPUT_DATA_FORMATS.md  Makefile  README.md  api.rest  docker-compose.yml  pyproject.toml  requirements.txt  tasks.md  test_cb_movement.py  test_main_profiles_ui.md  visualize_profile.py
.github/: copilot-instructions.md
data/: curves.txt  k01.json  k04.hull  k05.hull  k06.hull  kayak_003.hull  sea_kayak_pro.json
docker/: nginx.conf  supervisord.conf
docs/: Architecture.md  Glossary.md  Phase2_Implementation_Summary.md  Phase3_Implementation_Summary.md  Phase3_QuickRef.md  Phase4_Implementation_Summary.md  Phase5_Implementation_Summary.md  Planning_to_use_webgl.md  Resistance_analysis_planning.md  Test_suite_summary.md  User_Guide.md
old/: main.py
old/geometry/: hull.py  interpolation.py  point.py  profile.py  volume.py
old/hydrostatics/: volume.py
old/interface/: models.py
old/model/: hull.py  point.py  profile.py
old/research/: profile_export.json  profile_visualizer.html  spline.py  spline3D.py  struct.json  struct.py  struct_square.json  volume.py
old/routes/: hull.py
src/: config.py  main.py
src/analysis/: hull_parameters.py  resistance.py  stability.py
src/geometry/: curve.py  hull.py  point.py  profile.py  spline.py  transformations.py  weight.py
src/hydrostatics/: __init__.py  center_of_gravity.py  cross_section.py
src/model/: models.py
src/routes/: hull.py
src/utils/: __init__.py  filename.py
test/: __init__.py
test/scripts/: test_cb_movement.py.bak  test_profile_area.py  visualize_profile.py
test/unit/: __init__.py  test_config.py  test_curve.py  test_filename.py  test_hull.py  test_hull_parameters.py  test_point.py  test_profile.py  test_profile_new.py  test_profile_old.py.bak  test_resistance.py  test_spline.py  test_stability.py  test_weight.py
visualization/: index.html  script.js  styles.css  webgl-renderer.js
